Add section F2 and F3

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,8 @@
     <color name="redLight">#d6ef0000</color>
     <color name="gray">#757575</color>
     <color name="green">#009900</color>
-    <color name="redOverlay">#7f990000</color>
+    <color name="red_overlay">#7f990000</color>
+    <color name="green_overlay">#7f009900</color>
     <color name="blackOverlay">#7f000000</color>
     <color name="whiteOverlay">#7fffffff</color>
     <color name="redDark">#990000</color>
