--- a/app/src/main/res/layout/activity_section_f7_s6.xml
+++ b/app/src/main/res/layout/activity_section_f7_s6.xml
@@ -224,7 +224,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -257,7 +257,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
 
                     <TextView
@@ -273,7 +273,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
 
                     <TextView
@@ -289,7 +289,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
