--- a/app/src/main/res/layout/activity_section_f8_02.xml
+++ b/app/src/main/res/layout/activity_section_f8_02.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="callback"
-            type="edu.aku.hassannaqvi.uen_kmc.ui.sections.SectionF801Activity" />
+            type="edu.aku.hassannaqvi.uen_kmc.ui.sections.SectionF802Activity" />
     </data>
 
     <ScrollView
@@ -96,7 +96,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -138,7 +138,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -284,7 +284,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -326,7 +326,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -554,6 +554,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
 
@@ -570,6 +571,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -678,6 +680,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -720,6 +723,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -866,6 +870,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -908,6 +913,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -1136,6 +1142,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
 
@@ -1152,6 +1159,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -1260,6 +1268,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -1302,6 +1311,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -1448,6 +1458,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -1490,6 +1501,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -1718,6 +1730,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
 
@@ -1734,6 +1747,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -1842,6 +1856,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -1884,6 +1899,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -2030,6 +2046,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -2072,6 +2089,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -2300,6 +2318,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
 
@@ -2316,6 +2335,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
