--- a/app/src/main/res/layout/activity_section_f9_s6.xml
+++ b/app/src/main/res/layout/activity_section_f9_s6.xml
@@ -218,6 +218,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -251,6 +252,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
 
@@ -267,6 +269,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
 
@@ -283,6 +286,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
