--- a/app/src/main/res/layout/activity_section_f6_s3.xml
+++ b/app/src/main/res/layout/activity_section_f6_s3.xml
@@ -78,7 +78,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
