--- a/app/src/main/res/layout/activity_section_f7_s1.xml
+++ b/app/src/main/res/layout/activity_section_f7_s1.xml
@@ -462,6 +462,7 @@
 
                             android:visibility='@{f7204h.checked? View.VISIBLE : View.GONE}'
                             app:maxValue="100"
+                            app:minValue="1"
                             app:type="range" />
 
                         <RadioButton
@@ -482,6 +483,7 @@
 
                             android:visibility='@{f7204m.checked? View.VISIBLE : View.GONE}'
                             app:maxValue="100"
+                            app:minValue="1"
                             app:type="range" />
                     </RadioGroup>
                 </LinearLayout>
