--- a/app/src/main/res/layout/activity_section_f7_s4.xml
+++ b/app/src/main/res/layout/activity_section_f7_s4.xml
@@ -444,6 +444,7 @@
 
                             android:visibility='@{f7406m.checked? View.VISIBLE : View.GONE}'
                             app:maxValue="100"
+                            app:minValue="1"
                             app:type="range" />
 
                         <RadioButton
@@ -464,6 +465,7 @@
 
                             android:visibility='@{f7406h.checked? View.VISIBLE : View.GONE}'
                             app:maxValue="100"
+                            app:minValue="1"
                             app:type="range" />
                     </RadioGroup>
                 </LinearLayout>
@@ -506,7 +508,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -792,7 +794,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
-
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
