--- a/app/src/main/res/layout/activity_section_f9_s3.xml
+++ b/app/src/main/res/layout/activity_section_f9_s3.xml
@@ -329,6 +329,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
 
@@ -345,6 +346,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -404,6 +406,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
@@ -446,6 +449,7 @@
                         android:inputType="number"
                         android:maxLength="3"
                         app:maxValue="100"
+                        app:minValue="1"
 
                         app:type="range" />
                 </LinearLayout>
